--- a/hashimoto_unitree/package.xml
+++ b/hashimoto_unitree/package.xml
@@ -18,9 +18,12 @@
   <depend>std_msgs</depend>
   <depend>rosbag2_cpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>turtlesim</depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <exec_depend>ros2launch</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
