--- a/hashimoto_unitree/CMakeLists.txt
+++ b/hashimoto_unitree/CMakeLists.txt
@@ -33,6 +33,8 @@ set (
   nav_msgs
   tf2_geometry_msgs
   turtlesim
+  visualization_msgs
+  obstacle_detector
 )
 
 # find dependencies
@@ -48,6 +50,8 @@ find_package(nav_msgs REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(turtlesim REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(visualization_msgs REQUIRED)
+find_package(obstacle_detector REQUIRED)
 
 add_executable(sport_prog src/sport_prog.cpp src/common/ros2_sport_client.cpp)
 add_executable(mujoco_prog src/mujoco_prog.cpp src/common/motor_crc.cpp src/common/ros2_sport_client.cpp)
@@ -57,6 +61,17 @@ add_executable(waypoint_pot_goal src/waypoint_pot_goal.cpp)
 add_executable(waypoint_pot_goal_turtlesim src/waypoint_pot_goal_turtlesim.cpp)
 add_executable(rotate_matrix src/rotate_matrix.cpp)
 add_executable(goal_pose_editor src/goal_pose_editor.cpp)
+add_executable(cmd2climb src/cmd2climb.cpp src/common/ros2_sport_client.cpp)
+add_executable(height_map src/height_map.cpp)
+add_executable(obstacle_hit src/obstacle_hit.cpp)
+add_executable(cmd2sport_stop src/cmd2sport_stop.cpp src/common/ros2_sport_client.cpp)
+
+target_include_directories(rotate_matrix
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
 
 ament_target_dependencies(sport_prog ${DEPENDENCY_LIST})
 ament_target_dependencies(mujoco_prog ${DEPENDENCY_LIST})
@@ -65,13 +80,10 @@ ament_target_dependencies(cmd2sport ${DEPENDENCY_LIST})
 ament_target_dependencies(waypoint_pot_goal ${DEPENDENCY_LIST})
 ament_target_dependencies(waypoint_pot_goal_turtlesim ${DEPENDENCY_LIST})
 ament_target_dependencies(goal_pose_editor ${DEPENDENCY_LIST})
-
-target_include_directories(rotate_matrix
-  PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
-    $<INSTALL_INTERFACE:include>
-)
+ament_target_dependencies(cmd2climb ${DEPENDENCY_LIST})
+ament_target_dependencies(height_map ${DEPENDENCY_LIST})
+ament_target_dependencies(obstacle_hit ${DEPENDENCY_LIST})
+ament_target_dependencies(cmd2sport_stop ${DEPENDENCY_LIST})
 
 ament_target_dependencies(rotate_matrix ${DEPENDENCY_LIST})
 
@@ -84,10 +96,14 @@ install(TARGETS
         waypoint_pot_goal_turtlesim
         rotate_matrix
         goal_pose_editor
+        cmd2climb
+        height_map
+        obstacle_hit
+        cmd2sport_stop
         DESTINATION lib/${PROJECT_NAME})
         
 install(
-  DIRECTORY launch
+  DIRECTORY launch rviz
   DESTINATION share/${PROJECT_NAME}
 )
 
