--- a/hashimoto_unitree/glim_config/config_viewer.json
+++ b/hashimoto_unitree/glim_config/config_viewer.json
@@ -7,7 +7,12 @@
       4.0
     ],
     "enable_partial_rendering": false,
-    "partial_rendering_budget": 1024
+    "partial_rendering_budget": 1024,
+    "point_shape_circle": true,
+    "point_size_metric": false,
+    "point_size": 10.0,
+    "points_alpha": 0.5,
+    "factors_alpha": 0.5
   },
   "interactive_viewer": {
     "viewer_width": 2560,
@@ -17,6 +22,11 @@
       4.0
     ],
     "enable_partial_rendering": false,
-    "partial_rendering_budget": 1024
+    "partial_rendering_budget": 1024,
+    "point_shape_circle": true,
+    "point_size_metric": false,
+    "point_size": 10.0,
+    "points_alpha": 0.5,
+    "factors_alpha": 0.5
   }
 }
