--- a/hashimoto_unitree/navigation2_config/nav2_params_modified.yaml
+++ b/hashimoto_unitree/navigation2_config/nav2_params_modified.yaml
@@ -39,8 +39,8 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.15
-      yaw_goal_tolerance: 0.25
+      xy_goal_tolerance: 0.10
+      yaw_goal_tolerance: 0.20
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
@@ -68,8 +68,8 @@ controller_server:
       linear_granularity: 0.1
       angular_granularity: 0.1
       transform_tolerance: 0.2
-      xy_goal_tolerance: 0.15
-      trans_stopped_velocity: 0.25
+      xy_goal_tolerance: 0.10
+      trans_stopped_velocity: 0.20
       short_circuit_trajectory_evaluation: True
       stateful: True
       critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
@@ -88,25 +88,25 @@ local_costmap:
   local_costmap:
     ros__parameters:
       update_frequency: 5.0
-      publish_frequency: 2.0
+      publish_frequency: 5.0
       global_frame: odom
       robot_base_frame: base_link
       use_sim_time: True
       rolling_window: true
-      width: 12
-      height: 12
+      width: 6
+      height: 6
       resolution: 0.05
       footprint: "[[-0.30, 0.30], [-0.30, -0.30], [0.30, -0.30], [0.30, 0.30]]"
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.30
+        inflation_radius: 0.40
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
         publish_voxel_map: True
-        origin_z: -0.4
+        origin_z: -0.2
         z_resolution: 0.05
         z_voxels: 16
         min_obstacle_height: -0.2
@@ -116,9 +116,9 @@ local_costmap:
         pointcloud:
           topic: /cloud_registered_body
           min_obstacle_height: -0.2
-          max_obstacle_height: 0.0
+          max_obstacle_height: 2.0
           clearing: True
-          marking: True
+          marking: False
           data_type: "PointCloud2"
           raytrace_max_range: 3.0
           raytrace_min_range: 0.0
@@ -162,7 +162,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.20
+        inflation_radius: 0.40
       always_send_full_costmap: True
 
 map_server:
