add docker envirnment

--- a/hashimoto_unitree/navigation2_config/nav2_params_modified.yaml
+++ b/hashimoto_unitree/navigation2_config/nav2_params_modified.yaml
@@ -3,7 +3,7 @@ bt_navigator:
     use_sim_time: True
     global_frame: map
     robot_base_frame: base_link
-    odom_topic: /fast_lio/odom
+    odom_topic: fast_lio/odom
     bt_loop_duration: 10
     default_server_timeout: 20
     navigators: ['guided_navigator', 'patrol_navigator']
@@ -28,8 +28,8 @@ controller_server:
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5
-      movement_time_allowance: 50.0
+      required_movement_radius: 0.2
+      movement_time_allowance: 5.0
     # Goal checker parameters
     #precise_goal_checker:
     #  plugin: "nav2_controller::SimpleGoalChecker"
@@ -39,41 +39,42 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.10
-      yaw_goal_tolerance: 0.20
+      xy_goal_tolerance: 0.20
+      yaw_goal_tolerance: 0.10
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: -0.2
+      min_vel_x: -0.3
       min_vel_y: 0.0
-      max_vel_x: 0.28
+      max_vel_x: 0.6
       max_vel_y: 0.0
-      max_vel_theta: 0.3
-      min_speed_xy: -0.28
-      max_speed_xy: 0.28
-      min_speed_theta: 0.15
+      max_vel_theta: 0.9
+      min_vel_theta: -0.9
+      min_speed_xy: -0.3
+      max_speed_xy: 0.6
+      min_speed_theta: -0.4
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
       acc_lim_x: 2.0
       acc_lim_y: 0.0
-      acc_lim_theta: 0.8
+      acc_lim_theta: 2.0
       decel_lim_x: -2.0
       decel_lim_y: 0.0
-      decel_lim_theta: -0.8
+      decel_lim_theta: -2.0
       vx_samples: 40
       vy_samples: 0
       vtheta_samples: 40
-      sim_time: 1.5
+      sim_time: 2.0
       linear_granularity: 0.1
       angular_granularity: 0.1
       transform_tolerance: 0.2
-      xy_goal_tolerance: 0.10
+      xy_goal_tolerance: 0.20
       trans_stopped_velocity: 0.20
       short_circuit_trajectory_evaluation: True
       stateful: True
       critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
-      BaseObstacle.scale: 0.02
+      BaseObstacle.scale: 50.0
       PathAlign.scale: 32.0
       PathAlign.forward_point_distance: 0.1
       GoalAlign.scale: 24.0
@@ -96,11 +97,11 @@ local_costmap:
       width: 6
       height: 6
       resolution: 0.05
-      footprint: "[[-0.30, 0.30], [-0.30, -0.30], [0.30, -0.30], [0.30, 0.30]]"
+      footprint: "[[-0.50, 0.50], [-0.50, -0.50], [0.80, -0.50], [0.80, 0.50]]"
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
+        cost_scaling_factor: 1.0
         inflation_radius: 0.40
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
@@ -109,7 +110,7 @@ local_costmap:
         origin_z: -0.2
         z_resolution: 0.05
         z_voxels: 16
-        min_obstacle_height: -0.2
+        min_obstacle_height: -0.3
         max_obstacle_height: 2.0
         mark_threshold: 0
         observation_sources: pointcloud
@@ -118,11 +119,11 @@ local_costmap:
           min_obstacle_height: -0.2
           max_obstacle_height: 2.0
           clearing: True
-          marking: False
+          marking: True
           data_type: "PointCloud2"
           raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
+          obstacle_max_range: 3.0
           obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
@@ -154,15 +155,15 @@ global_costmap:
           data_type: "PointCloud2"
           raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
+          obstacle_max_range: 3.0
           obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.40
+        cost_scaling_factor: 1.0
+        inflation_radius: 0.20
       always_send_full_costmap: True
 
 map_server:
@@ -211,7 +212,7 @@ behavior_server:
     use_sim_time: true
     simulate_ahead_time: 2.0
     max_rotational_vel: 1.0
-    min_rotational_vel: 0.4
+    min_rotational_vel: 0.2
     rotational_acc_lim: 3.2
 
 robot_state_publisher:
@@ -235,10 +236,10 @@ velocity_smoother:
     smoothing_frequency: 10.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.28, 0.0, 0.3]
-    min_velocity: [-0.2, 0.0, -0.3]
-    max_accel: [2.0, 0.0, 0.8]
-    max_decel: [-2.0, 0.0, -0.8]
+    max_velocity: [0.6, 0.0, 0.9]
+    min_velocity: [-0.4, 0.0, -0.9]
+    max_accel: [2.0, 0.0, 2.0]
+    max_decel: [-2.0, 0.0, -2.0]
     odom_topic: "fast_lio/odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
